--- a/roles/cluster_prometheus/tasks/node_exporter.yml
+++ b/roles/cluster_prometheus/tasks/node_exporter.yml
@@ -14,7 +14,7 @@
     owner: root
     group: root
     mode: '644'
-  notify: Restart node exporter
+  notify: "Restart node exporter"
   become: true
 
 - name: Create /etc/prometheus directory if it does not exist
@@ -38,6 +38,6 @@
 - name: Start node exporter
   ansible.builtin.service:
     name: prometheus-node-exporter
-    state: restarted
+    state: started
   become: true
 
