--- a/roles/nfs_server/tasks/main.yml
+++ b/roles/nfs_server/tasks/main.yml
@@ -29,8 +29,8 @@
       - Reload nfs server
 
   when: 
-    - pifarm_export_nfs_share
-    - pifarm_nfs_exports is defined and (pifarm_nfs_exports|length>0)
+    - export_nfs_shares
+    - nfs_exports is defined and (nfs_exports|length>0)
     - ( ansible_facts.architecture is search("arm") and
       ansible_facts.userspace_bits == "64" ) or
       ansible_facts.architecture is search("aarch64")
