--- a/roles/update/tasks/update_pi.yml
+++ b/roles/update/tasks/update_pi.yml
@@ -1,43 +1,46 @@
 ---
 
-- name: update the cache (Debian)
-  ansible.builtin.apt: 
-    update_cache: true
-    autoremove: yes
-    autoclean: yes
-  register: upd_cache_out
+- block:
+  - name: update the cache (Debian)
+    ansible.builtin.apt: 
+      update_cache: true
+      autoremove: yes
+      autoclean: yes
+    register: upd_cache_out
 
-- name: update cache results
-  ansible.builtin.debug:
-    var: upd_cache_out
-    verbosity: 1
+  - name: update cache results
+    ansible.builtin.debug:
+      var: upd_cache_out
+      verbosity: 1
 
-- name: Update all packages to the latest version (Debian)
-  ansible.builtin.apt:
-    upgrade: dist
-  register: upd_out
+  - name: Update all packages to the latest version (Debian)
+    ansible.builtin.apt:
+      upgrade: dist
+    register: upd_out
 
-- name: Package update results
-  ansible.builtin.debug:
-    var: upd_out
-    verbosity: 1
+  - name: Package update results
+    ansible.builtin.debug:
+      var: upd_out
+      verbosity: 1
 
-- name: Check if a reboot is needed for Debian and Ubuntu boxes
-  register: reboot_is_required
-  stat: path=/var/run/reboot-required get_md5=no
+  - name: Check if a reboot is needed for Debian and Ubuntu boxes
+    register: reboot_is_required
+    stat: path=/var/run/reboot-required get_md5=no
 
-- name: reboot required results
-  ansible.builtin.debug:
-    var: reboot_is_required
-    verbosity: 1
+  - name: reboot required results
+    ansible.builtin.debug:
+      var: reboot_is_required
+      verbosity: 1
 
-# SMELL  move this to a handler ????
-- name: Reboot the Debian or Ubuntu server
-  ansible.builtin.reboot:
-    msg: "Reboot initiated by Ansible due to kernel updates"
-    connect_timeout: 5
-    reboot_timeout: 300
-    pre_reboot_delay: 0
-    post_reboot_delay: 30
-    test_command: uptime
-  when: reboot_is_required.stat.exists
+  # SMELL  move this to a handler ????
+  - name: Reboot the Debian or Ubuntu server
+    ansible.builtin.reboot:
+      msg: "Reboot initiated by Ansible due to kernel updates"
+      connect_timeout: 5
+      reboot_timeout: 300
+      pre_reboot_delay: 0
+      post_reboot_delay: 30
+      test_command: uptime
+    when: reboot_is_required.stat.exists
+
+  become: true
