--- a/roles/cluster_loki/defaults/main.yml
+++ b/roles/cluster_loki/defaults/main.yml
@@ -4,6 +4,7 @@
 loki_version: v2.6.1
 loki_working_dir: /u01/loki
 loki_exe_dir: /usr/local/bin
+loki_config_file: /etc/loki-config.yml
 
 promtail_config_file: /etc/promtail.yml
 promtail_collector: 192.168.11.10
@@ -13,7 +14,11 @@ promtail_port: 1514
 loki_server: 127.0.0.1
 loki_port: 3100
 
-# SMELL
+# SMELL 
 export_rsyslog: no
 collect_logs: no
 pifarm_grafana_server: no
+
+# SMELL This needs to be a common user.  refactor the main task???
+loki_user: promtail
+loki_group: promtail
