--- a/roles/cluster_prometheus/tasks/collector.yml
+++ b/roles/cluster_prometheus/tasks/collector.yml
@@ -1,73 +1,78 @@
 ---
 
+- name: Install prometheus server package on the collector
+  package: 
+    pkg: prometheus
+    state: present
+    update_cache: true
+  become: true
+
+# SMELL verify this is not being done twice
+- name: Install prometheus node exporter on the collector
+  package: 
+    pkg: prometheus-node-exporter
+    state: present
+    update_cache: true
+  become: true
+
+- name: Create /etc/prometheus directory if it does not exist
+  file:
+    path: /etc/prometheus
+    state: directory
+    owner: root
+    group: root
+    mode: '0755'
+  become: true
+
+- name: Create tailored prometheus configuration file
+  template:
+    src: prometheus_server.xml.j2
+    dest: /etc/prometheus/prometheus.yml
+    owner: root
+    group: root
+    mode: '0644'
+  become: true
+  notify:
+    - Restart prometheus service
+
+- name: Override the prometheus defaults (change tsdb location)
+  ansible.builtin.template:
+    src: prometheus_defaults.conf.j2
+    dest: "/etc/default/prometheus"
+    owner: root
+    group: root
+    mode: 0644
+  become: true
+
+# ..........................................
 - block:
+  - name: Install snmp with mibs and exporter for Ubiquiti
+    apt: 
+      name:
+        - prometheus-snmp-exporter
+        - snmp-mibs-downloader
+        - snmp
+      state: present
+    become: yes
+    notify:
+      - Restart prometheus service
 
-    - name: Install prometheus server package on the collector
-      package: 
-        pkg: prometheus
-        state: present
-        update_cache: true
-      become: true
+  - name: Configure Prometheus snmp.yml
+    copy:
+      src: snmp.yml
+      dest: /etc/prometheus/snmp.yml
+      owner: root
+      group: root
+      mode: '0644'
+    become: yes
 
-    # SMELL verify this is not being done twice
-    - name: Install prometheus node exporter on the collector
-      package: 
-        pkg: prometheus-node-exporter
-        state: present
-        update_cache: true
-      become: true
-
-    - name: Create /etc/prometheus directory if it does not exist
-      file:
-        path: /etc/prometheus
-        state: directory
-        owner: root
-        group: root
-        mode: '0755'
-      become: true
-
-    - name: Create tailored prometheus configuration file
-      template:
-        src: prometheus_server.xml.j2
-        dest: /etc/prometheus/prometheus.yml
-        owner: root
-        group: root
-        mode: '0644'
-      become: true
-      notify:
-        - Restart prometheus service
-
-    - block:
-      - name: Install snmp with mibs and exporter for Ubiquiti
-        apt: 
-          name:
-            - prometheus-snmp-exporter
-            - snmp-mibs-downloader
-            - snmp
-          state: present
-        become: yes
-
-      - name: Configure Prometheus snmp.yml
-        copy:
-          src: snmp.yml
-          dest: /etc/prometheus/snmp.yml
-          owner: root
-          group: root
-          mode: '0644'
-        become: yes
-
-      - name: Copy the Ubiquiti MIB file to the proper location
-        copy:
-          src: UBNT-MIB 
-          dest: /var/lib/snmp/mibs/UBNT-MIB
-          owner: root
-          group: root
-          mode: '0664'
-        become: yes
-      when: 
-        - prometheus_install_snmp
-
-  when:
-    - pifarm_prometheus_collector
-
-  
+  - name: Copy the Ubiquiti MIB file to the proper location
+    copy:
+      src: UBNT-MIB 
+      dest: /var/lib/snmp/mibs/UBNT-MIB
+      owner: root
+      group: root
+      mode: '0664'
+    become: yes
+  when: 
+    - prometheus_install_snmp
