--- a/test-roles.yml
+++ b/test-roles.yml
@@ -4,5 +4,6 @@
   - helpers
   gather_facts: yes
   roles:
-    - cluster_prometheus
+    #- cluster_prometheus
     #- cluster_loki
+    - cluster_grafana
