--- a/roles/cluster_prometheus/vars/main.yml
+++ b/roles/cluster_prometheus/vars/main.yml
@@ -1,4 +1,5 @@
 ---
 
 # Assumes the whole cluster is using prometheus (workers,helpers)
-scraped_hosts: "{{ hostvars[inventory_hostname]['groups']['workers']  }}"
+scraped_workers: "{{ hostvars[inventory_hostname]['groups']['workers']  }}"
+scraped_helpers: "{{ hostvars[inventory_hostname]['groups']['helpers']  }}"
