--- a/roles/cluster_prometheus/defaults/main.yml
+++ b/roles/cluster_prometheus/defaults/main.yml
@@ -9,7 +9,7 @@ pifarm_connected_internet: True
 prometheus_node_exporter: False
 
 # The Prometheus server addresses
-prometheus_monitor_ip:  '127.0.0.1'
+# prometheus_monitor_ip:  '127.0.0.1'
 prometheus_alert_server: '127.0.0.1'
 
 # Assumes this machine is the collector.
@@ -18,7 +18,7 @@ prometheus_server: "{{ ansible_eth0.ipv4.address }}"
 # By default don't install the server
 prometheus_collector: False
 
-# True Only tested for Ubiquiti EdgeRouter X
+# Default to not doing snmp
 prometheus_install_snmp: False
 
 prometheus_monitor_name: PiFarm
@@ -28,4 +28,5 @@ prometheus_tsdb_path: "/var/lib/prometheus/metrics2/"
 
 # TODO SMELL each end-point will have it's own mib and be in its own "prometheus job"
 mib_module: piswitch
+mib_community: pifarm
 
