--- a/test-roles.yml
+++ b/test-roles.yml
@@ -4,6 +4,6 @@
   - helpers
   gather_facts: yes
   roles:
-    #- cluster_prometheus
+    - cluster_prometheus
     #- cluster_loki
-    - cluster_grafana
+    #- cluster_grafana
