--- a/test-roles.yml
+++ b/test-roles.yml
@@ -1,9 +1,12 @@
 ---
 - hosts: 
-  - workers
+  # - workers
   - helpers
   gather_facts: yes
   roles:
-    - cluster_prometheus
+    #- cluster_prometheus
     #- cluster_loki
     #- cluster_grafana
+    #- dump
+    - aa
+
